tests/machine/x/java/cast_struct.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramscast_struct2521769309/001/Main.java:9: error: cannot infer type arguments for HashMap<>
	static Map<String,String> todo = new HashMap<>(new Todo("hi"));
	                                 ^
/tmp/TestCompileValidProgramscast_struct2521769309/001/Main.java:11: error: cannot find symbol
	System.out.println(todo.title);
	                       ^
  symbol:   variable title
  location: variable todo of type Map<String,String>
2 errors


  1| type Todo {
  2|   title: string
